--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,14 @@ button {
 	color: #ffffff;
 	padding: 5px;
 	font-size: 1.1rem;
+	border-radius: 5px;
+	margin: 5px;
 }
 .hidden {
 	display: none;
 }
 /* Setting the flex container */
 .flex-container {
-	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -67,3 +68,49 @@ button {
 	padding-top: 10px;
 }
 
+#creature-box {
+	width: 240px;
+	height: 280px;
+	margin: 0 5 0 5;
+	padding: 5px;
+	border: solid 5px #808080;
+	border-radius: 10px;
+	background-image: url('../images/zombie-approach-01.webp');
+	background-position: center;
+	background-color: #000000;
+	background-repeat: no-repeat;
+    background-size: auto 100%;
+}
+#danger-box {
+	display: flex;
+	height: 100%;
+	width: 20%;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.danger-square {
+	border: solid 0px #808080;
+	border-radius: 5px;
+	height: 20%;
+	width: 100%;
+	background-color: #000000;
+}
+
+#question-box {
+	width: 240px;
+	height: 280px;
+	margin: 0 5 0 5;
+	padding: 5px;
+	border: solid 5px #808080;
+	border-radius: 10px;
+	background-color: #003471;
+}
+#questions {
+	padding: 5px;
+}
+#questions h3, p{
+	padding-bottom: 5px;
+}
+#answers {
+	text-align: center;
+}
