--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ button {
 /* Styling the title card */
 #title-card {
 	width: 240px;
+	height: 280px;
 	margin: 0 5 0 5;
 	padding: 5px;
 	border: solid 5px #808080;
@@ -95,7 +96,31 @@ button {
 	width: 100%;
 	background-color: #000000;
 }
-
+#danger-square-01 {
+	background-image: url('../images/danger-block-01.webp');
+	background-position: center;
+	background-size: cover;
+}
+#danger-square-02 {
+	background-image: url('../images/danger-block-02.webp');
+	background-position: center;
+	background-size: cover;
+}
+#danger-square-03 {
+	background-image: url('../images/danger-block-03.webp');
+	background-position: center;
+	background-size: cover;
+}
+#danger-square-04 {
+	background-image: url('../images/danger-block-04.webp');
+	background-position: center;
+	background-size: cover;
+}
+#danger-square-05 {
+	background-image: url('../images/danger-block-05.webp');
+	background-position: center;
+	background-size: cover;
+}
 #question-box {
 	width: 240px;
 	height: 280px;
