--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@ body {
 	height: 100vh;
 	width: 100vw;
 	background-color: #1b1464;
+	background-image: linear-gradient(to bottom right, #1b1464, #000000);
+	background-attachment: fixed;
 	color: #ffffff;
 	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
 }
@@ -127,6 +129,7 @@ button {
 	border: solid 5px #808080;
 	border-radius: 10px;
 	background-color: #003471;
+	background-image: linear-gradient(to bottom right, #003471, #000000);
 }
 #questions {
 	padding: 5px;
