--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ button:hover {
     background-size: auto 100%;
 }
 #danger-box {
-	display: flex;
+	display: none;
 	height: 100%;
 	width: 20%;
 	align-items: flex-end;
@@ -112,7 +112,7 @@ button:hover {
 	border-radius: 5px;
 	height: 20%;
 	width: 100%;
-	background-color: #000000;
+	background-color: rgb(0, 0, 0, 0.5);
 }
 #danger-square-01 {
 	background-image: url('../images/danger-block-01.webp');
@@ -120,22 +120,22 @@ button:hover {
 	background-size: cover;
 }
 #danger-square-02 {
-	background-image: url('../images/danger-block-02.webp');
+	background-image: url('');
 	background-position: center;
 	background-size: cover;
 }
 #danger-square-03 {
-	background-image: url('../images/danger-block-03.webp');
+	background-image: url('');
 	background-position: center;
 	background-size: cover;
 }
 #danger-square-04 {
-	background-image: url('../images/danger-block-04.webp');
+	background-image: url('');
 	background-position: center;
 	background-size: cover;
 }
 #danger-square-05 {
-	background-image: url('../images/danger-block-05.webp');
+	background-image: url('');
 	background-position: center;
 	background-size: cover;
 }
@@ -148,6 +148,13 @@ button:hover {
 	border-radius: 10px;
 	background-color: #003471;
 	background-image: linear-gradient(to bottom right, #003471, #000000);
+}
+#text-box {
+	padding: 5px;
+}
+#btn-box {
+	text-align: right;
+	padding-right: 20px;
 }
 #questions {
 	padding: 5px;
