--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,15 +155,16 @@ button:hover {
 	padding: 5px;
 }
 #btn-box {
+	position: absolute;
+	bottom: 20px;
+	right: 10px;
 	text-align: right;
 	padding-right: 20px;
 }
+.answer-btn {
+	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
+	font-size: 0.7rem;
+}
 #questions {
-	padding: 5px;
-}
-#questions h3, p{
 	padding-bottom: 5px;
-}
-#answers {
-	text-align: center;
 }
