--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ body {
 	color: #ffffff;
 	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
 }
+h1 {
+	font-family: 'League Gothic', sans-serif;
+	font-size: 3rem;
+}
 /* Styling buttons... */
 button {
 	background-color: #000000;
@@ -60,7 +64,6 @@ button:hover {
 /* Styling the title h1 in the title card... */
 #title {
 	flex-basis: 100%;
-	font-family: 'League Gothic', sans-serif;
 	text-align: center;
 	font-size: 3rem;
 }
@@ -169,4 +172,28 @@ button:hover {
 }
 #questions {
 	padding-bottom: 5px;
+}
+#shadow-box {
+	display: none;
+	position:fixed;
+	top: 0;
+	left: 0;
+	background-color: rgb(0, 0, 0, 0.8);
+	width: 100%;
+	height: 100%;
+}
+#win-state {
+	flex-basis: 100%;
+	width: 100%;
+	text-align: center;
+	color: #007236;
+}
+#win-text {
+	padding: 20px;
+}
+#fail-state {
+	flex-basis: 100%;
+	width: 100%;
+	text-align: center;
+	color: #9E0B0F;
 }
