--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ button:hover {
 	position:fixed;
 	top: 0;
 	left: 0;
-	background-color: rgb(0, 0, 0, 0.8);
+	background-color: #000000;
 	width: 100%;
 	height: 100%;
 }
