--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ button:hover {
 .flex-container {
 	display: flex;
 	height: 100%;
+	width: 100%;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
@@ -55,27 +56,41 @@ button:hover {
 	align-content: center;
 	flex-wrap: wrap;
 	width: 85%;
-	height: 80%;
-	padding: 5px;
+	height: 85%;
 	border: solid 5px #808080;
 	border-radius: 10px;
+	background-image: url("../images/background-image.webp");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-color: #000000;
 }
 /* Styling the title h1 in the title card... */
 #title {
+	background-color: rgb(0, 0, 0, 0.5);
 	flex-basis: 100%;
 	text-align: center;
 	font-size: 3rem;
 }
 /* Styling the sub-title h3 in the title card... */
 #sub-title {
+	background-color: rgb(0, 0, 0, 0.5);
 	flex-basis: 100%;
 	color: #9e0b0f;
 	text-align: center;
 	padding-bottom: 40px;
 }
+.info-box {
+	background-color: rgb(0, 0, 0, 0.5);
+	flex-basis: 50%;
+	text-align: right;
+}
+.info-box i {
+	padding: 10px;
+}
 /* Styling the input box for the user's name.. */
 #enter-name {
+	background-color: rgb(0, 0, 0, 0.5);
 	flex-basis: 100%;
 	text-align: center;
 }
