--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ button {
 	color: #ffffff;
 	padding: 5px;
 	font-size: 1.1rem;
+	border: solid 1px #808080;
 	border-radius: 5px;
 	margin: 5px;
 }
@@ -55,8 +56,8 @@ button:hover {
 	justify-content: center;
 	align-content: center;
 	flex-wrap: wrap;
-	width: 85%;
-	height: 85%;
+	width: 250px;
+	height: 500px;
 	border: solid 5px #808080;
 	border-radius: 10px;
 	background-image: url("../images/background-image.webp");
@@ -98,20 +99,34 @@ button:hover {
 	padding: 5px;
 	margin: 10px;
 }
+#start-btn {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
 /* Styling the difficulty selection... */
 #choose-difficulty {
 	flex-basis: 100%;
 	text-align: center;
 	padding-top: 10px;
+	background-color: rgb(0, 0, 0, 0.5);
+}
+#game-card {
+	display: none;
+	overflow: hidden;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+	width: 250px;
+	height: 500px;
+	border: solid 5px #808080;
+	border-radius: 10px;
+	background-image: linear-gradient(to bottom right, #003471, #000000);
+	background-color: #003471;
 }
 /* Styling the box that displays the creature images... */
 #creature-box {
-	width: 240px;
-	height: 280px;
-	margin: 0 5 0 5;
-	padding: 5px;
-	border: solid 5px #808080;
-	border-radius: 10px;
+	width: 100%;
+	height: 50%;
 	overflow: hidden;
 	background-color: #000000;
 }
@@ -120,73 +135,40 @@ button:hover {
 	left: -150px;
 	top: -5px;
 }
-/* styling for green and red coloured squares that represent danger level or lives left */
-#danger-box {
-	display: none;
-	height: 100%;
-	width: 20%;
-	align-items: flex-end;
-    flex-wrap: wrap;
-}
-.danger-square {
-	border: solid 0px #808080;
-	border-radius: 5px;
-	height: 20%;
-	width: 100%;
-	background-color: rgb(0, 0, 0, 0.5);
-}
-#danger-square-01 {
-	background-image: url('../images/danger-block-01.webp');
-	background-position: center;
-	background-size: cover;
-}
-#danger-square-02 {
-	background-image: url('');
-	background-position: center;
-	background-size: cover;
-}
-#danger-square-03 {
-	background-image: url('');
-	background-position: center;
-	background-size: cover;
-}
-#danger-square-04 {
-	background-image: url('');
-	background-position: center;
-	background-size: cover;
-}
-#danger-square-05 {
-	background-image: url('');
-	background-position: center;
-	background-size: cover;
-}
 /* Styling the box in which the questions and messages appear... */
 #question-box {
-	width: 240px;
-	height: 280px;
-	margin: 0 5 0 5;
-	padding: 5px;
-	border: solid 5px #808080;
-	border-radius: 10px;
+	width: 100%;
+	height: 50%;
+	border-top: solid 5px #808080;
 	background-color: #003471;
 	background-image: linear-gradient(to bottom right, #003471, #000000);
 }
 #text-box {
+	width: 100%;
+	height: 75%;
+}
+#text-box p {
 	padding: 5px;
 }
-#btn-box {
-	position: absolute;
-	bottom: 20px;
-	right: 10px;
+#next-btn-box {
+	width: 100%;
 	text-align: right;
-	padding-right: 20px;
+}
+#next-btn-box button {
+	margin-right: 10px;
 }
 .answer-btn {
 	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
 	font-size: 0.7rem;
 }
 #questions {
-	padding-bottom: 5px;
+	padding: 10px;
+	text-align: center;
+}
+#answers {
+	padding-top: 5px;
+	width: 100%;
+	text-align: center;
 }
 #shadow-box {
 	display: none;
