--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,15 @@ button {
 /* Changing button text colour to red when hovered over... */
 button:hover {
 	color: #9E0B0F;
+	transform: scale(1.25);
+}
+i {
+	color: #808080;
+	padding: 10px;
+}
+i:hover {
+	color: #9E0B0F;
+	transform: scale(1.25);
 }
 /* Setting the hidden class to hide/unhide elements in javascript... */
 .hidden {
@@ -79,12 +88,14 @@ button:hover {
 	text-align: center;
 	padding-bottom: 40px;
 }
-.info-box {
-	flex-basis: 50%;
-	text-align: right;
-}
-.info-box i {
-	padding: 10px;
+#info-box {
+	position: fixed;
+	width: 250px;
+	height: 40px;
+	top: 0px;
+	text-align: center;
+	border-radius: 5px;
+	background-color: #000000;
 }
 /* Styling the input box for the user's name.. */
 #enter-name {
