--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     padding: 0;
     border: none;
 }
+
 /* Styling the body */
 body {
 	height: 100vh;
@@ -19,11 +20,14 @@ body {
 	color: #ffffff;
 	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
 }
+
+/* Setting font and size of all header elements */
 h1 {
 	font-family: 'League Gothic', sans-serif;
 	font-size: 3rem;
 }
-/* Styling buttons... */
+
+/* Styling all buttons... */
 button {
 	background-color: #000000;
 	color: #ffffff;
@@ -33,11 +37,13 @@ button {
 	border-radius: 5px;
 	margin: 5px;
 }
+
 /* Changing button text colour to red when hovered over... */
 button:hover {
 	color: #9E0B0F;
 	transform: scale(1.25);
 }
+/* Styling the fontawesome icons' look and hover state */
 i {
 	color: #808080;
 	padding: 10px;
@@ -46,10 +52,12 @@ i:hover {
 	color: #9E0B0F;
 	transform: scale(1.25);
 }
+
 /* Setting the hidden class to hide/unhide elements in javascript... */
 .hidden {
 	display: none;
 }
+
 /* Setting the flex container properties... */
 .flex-container {
 	display: flex;
@@ -59,35 +67,43 @@ i:hover {
 	align-items: center;
 	flex-wrap: wrap;
 }
-/* Styling the title card... */
-#title-card {
-	display: flex;
-	justify-content: center;
-	align-content: center;
-	flex-wrap: wrap;
+
+/* Styling the card class, these act as the main screens or pages of each section */
+.card {
 	width: 250px;
 	height: 500px;
 	border: solid 5px #808080;
 	border-radius: 10px;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+}
+
+/* Styling the title card... */
+#title-card {
+	display: flex;
 	background-image: url("../images/background-image.webp");
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-color: #000000;
 }
-/* Styling the title h1 in the title card... */
+
+/* Positioning the title h1 in the title card... */
 #title {
 	flex-basis: 100%;
 	text-align: center;
-	font-size: 3rem;
 }
-/* Styling the sub-title h3 in the title card... */
+
+/* Styling and positioning the sub-title h3 in the title card... */
 #sub-title {
 	flex-basis: 100%;
 	color: #9e0b0f;
 	text-align: center;
 	padding-bottom: 40px;
 }
+
+/* Styling the nav bar and fixing it to the top of the screen */
 #info-box {
 	position: fixed;
 	width: 250px;
@@ -97,7 +113,8 @@ i:hover {
 	border-radius: 5px;
 	background-color: #000000;
 }
-/* Styling the input box for the user's name.. */
+
+/* Styling the div containing the form for the user's name.. */
 #enter-name {
 	flex-basis: 100%;
 	text-align: center;
@@ -110,26 +127,23 @@ i:hover {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+
 /* Styling the difficulty selection... */
 #choose-difficulty {
 	flex-basis: 100%;
 	text-align: center;
 	padding-top: 10px;
 }
+
+/* Styling the game card, this houses the split screen view of the main game */
 #game-card {
 	display: none;
 	overflow: hidden;
-	justify-content: center;
-	align-content: center;
-	flex-wrap: wrap;
-	width: 250px;
-	height: 500px;
-	border: solid 5px #808080;
-	border-radius: 10px;
 	background-image: linear-gradient(to bottom right, #003471, #000000);
 	background-color: #003471;
 }
-/* Styling the box that displays the creature images... */
+
+/* Styling the top half. This is the box that displays the creature images and danger bar... */
 #creature-box {
 	display: flex;
 	justify-content: center;
@@ -138,6 +152,7 @@ i:hover {
 	overflow: hidden;
 }
 
+/* Styling the danger box, this contains the individual coloured squares that are revealed after wrong answers */
 #danger-box {
 	overflow: hidden;
 	height: 100%;
@@ -149,6 +164,8 @@ i:hover {
 	height: 20%;
 	z-index: 7;
 }
+
+/* Styling the view box that contains the creature images that change after wrong answers */
 #view-box {
 	overflow: hidden;
 	flex-basis: 80%;
@@ -157,7 +174,8 @@ i:hover {
 	position: relative;
 	left: -70%;
 }
-/* Styling the box in which the questions and messages appear... */
+
+/* Styling the bottom half. This is the box in which the questions and messages appear... */
 #question-box {
 	width: 100%;
 	height: 50%;
@@ -192,15 +210,18 @@ i:hover {
 	width: 100%;
 	text-align: center;
 }
-#shadow-box {
+
+/* Styling the info card, this forms the setting for all other pages */
+#info-card {
 	display: none;
-	position:fixed;
-	top: 0;
-	left: 0;
+	background-image: url("../images/background-image.webp");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-color: #000000;
-	width: 100%;
-	height: 100%;
 }
+
+/* Styling the message for when the quiz is won */
 #win-state {
 	flex-basis: 100%;
 	width: 100%;
@@ -210,6 +231,8 @@ i:hover {
 #win-text {
 	padding: 20px;
 }
+
+/* Styling the message for when the quiz is lost */
 #fail-state {
 	flex-basis: 100%;
 	width: 100%;
