--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ button {
 /* Changing button text colour to red when hovered over... */
 button:hover {
 	color: #9E0B0F;
-	transform: scale(1.25);
+	transform: scale(1.1);
 }
 /* Styling the fontawesome icons' look and hover state */
 i {
@@ -224,6 +224,29 @@ i:hover {
 }
 #info-card h1 {
 	margin: 20px 0px 20px 0px;
+}
+/* Styling the comment card */
+#comment-card {
+	overflow: scroll;
+	align-content: flex-start;
+	display: none;
+	background-image: url("../images/background-image.webp");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-color: #000000;
+}
+#comment-card h1 {
+	margin: 20px 0px 20px 0px;
+}
+#feedback-form {
+	width: 100%;
+	padding: 10px;
+}
+#feedback-form textarea {
+	width: 100%;
+	height: 80px;
+	resize: none;
 }
 /* Styling the results card */
 #results-card {
