Add labels to navbar links on mouse over/off also increase font size on name input

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,9 @@ i:hover {
 	text-align: center;
 }
 #enter-name input {
+	font-size: 1.5rem;
+	text-align: center;
+	width: 200px;
 	padding: 5px;
 	margin: 10px;
 }
