--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
 
 /* Styling the body */
 body {
-	height: 100vh;
 	width: 100vw;
 	background-color: #1b1464;
 	background-image: linear-gradient(to bottom right, #1b1464, #000000);
@@ -26,6 +25,7 @@ body {
 h1 {
 	font-family: 'League Gothic', sans-serif;
 	font-size: 3rem;
+	margin: 15px 0px 15px 0px;
 }
 p {
 	padding: 10px;
@@ -63,8 +63,8 @@ i:hover {
 
 /* Setting the flex container properties... */
 .flex-container {
+	margin-top: 75px;
 	display: flex;
-	height: 100%;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
@@ -96,6 +96,7 @@ i:hover {
 #title {
 	flex-basis: 100%;
 	text-align: center;
+	margin-bottom: 0px;
 }
 
 /* Styling and positioning the sub-title h3 in the title card... */
@@ -103,7 +104,6 @@ i:hover {
 	flex-basis: 100%;
 	color: #9e0b0f;
 	text-align: center;
-	padding-bottom: 40px;
 }
 
 /* Styling the nav bar and fixing it to the top of the screen */
@@ -119,11 +119,12 @@ i:hover {
 
 /* Styling the div containing the form for the user's name.. */
 #enter-name {
+	padding: 10px;
 	flex-basis: 100%;
 	text-align: center;
 }
 #enter-name input {
-	font-size: 1.5rem;
+	font-size: 1.1rem;
 	text-align: center;
 	width: 200px;
 	padding: 5px;
@@ -168,7 +169,6 @@ i:hover {
 }
 .danger-square {
 	height: 20%;
-	z-index: 7;
 }
 
 /* Styling the view box that contains the creature images that change after wrong answers */
@@ -183,6 +183,7 @@ i:hover {
 
 /* Styling the bottom half. This is the box in which the questions and messages appear... */
 #question-box {
+	box-sizing: border-box;
 	width: 100%;
 	height: 50%;
 	border-top: solid 5px #808080;
@@ -216,8 +217,9 @@ i:hover {
 
 /* Styling the info card */
 #info-card {
-	overflow: scroll;
+	overflow: auto;
 	align-content: flex-start;
+	justify-content: center;
 	display: none;
 	background-image: url("../images/background-image.webp");
 	background-position: center;
@@ -226,11 +228,13 @@ i:hover {
 	background-color: #000000;
 }
 #info-card h1 {
-	margin: 20px 0px 20px 0px;
+	text-align: center;
+	width: 100%;
+	margin: 15px 0px 15px 0px;
 }
 /* Styling the comment card */
 #comment-card {
-	overflow: scroll;
+	overflow: auto;
 	align-content: flex-start;
 	display: none;
 	background-image: url("../images/background-image.webp");
@@ -240,16 +244,26 @@ i:hover {
 	background-color: #000000;
 }
 #comment-card h1 {
-	margin: 20px 0px 20px 0px;
+	text-align: center;
+	width: 100%;
+	margin: 15px 0px 15px 0px;
+}
+#comment-card p {
+	text-align: center;
+	width: 100%;
 }
 #feedback-form {
-	width: 100%;
 	padding: 10px;
 }
+#feedback-form input {
+	width: 220px;
+	font-size: 1.1rem;
+}
 #feedback-form textarea {
-	width: 100%;
+	width: 220px;
 	height: 80px;
 	resize: none;
+	font-size: 1.1rem;
 }
 /* Styling the results card */
 #results-card {
@@ -262,7 +276,7 @@ i:hover {
 }
 /* Styling the score card */
 #score-card {
-	overflow: scroll;
+	overflow: auto;
 	align-content: flex-start;
 	display: none;
 	background-image: url("../images/background-image.webp");
@@ -270,6 +284,11 @@ i:hover {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-color: #000000;
+}
+#score-card h1 {
+	text-align: center;
+	width: 100%;
+	margin: 15px 0px 15px 0px;
 }
 
 /* Styling the message for when the quiz is won */
@@ -317,4 +336,18 @@ i:hover {
 	text-align: left;
 	padding: 20px;
 	color: #ffffff;
+}
+
+/* Setting media query for portrait/landscape modes */
+@media screen and (orientation: landscape) {
+	#creature-box {
+		width: 50%;
+		height: 100%;
+	}
+	#question-box {
+		width: 50%;
+		height: 100%;
+		border-top: none;
+		border-left: solid 5px #808080;
+	}
 }
