--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,10 @@ i:hover {
 	width: 100%;
 	margin: 15px 0px 15px 0px;
 }
+#info-card p {
+	text-align: center;
+	width: 100%;
+}
 /* Styling the comment card */
 #comment-card {
 	overflow: auto;
