--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,9 @@ i:hover {
 .danger-square {
 	height: 20%;
 }
+.danger-square img {
+	width: 100%;
+}
 
 /* Styling the view box that contains the creature images that change after wrong answers */
 #view-box {
@@ -177,6 +180,7 @@ i:hover {
 	flex-basis: 80%;
 }
 #zombie {
+	height: 100%;
 	position: relative;
 	left: -70%;
 }
