Increase font size for larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,6 +469,15 @@ i:hover {
 	#comment-card p {
 		width: 500px;
 	}
+	#questions {
+		font-size: 1.1rem;
+	}
+	#answers button {
+		font-size: 1.1rem;
+	}
+	#text-box {
+		font-size: 1.1rem;
+	}
 }
 
 /* Setting media query for size ref. Ipad air 820x1180 */
