--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,15 +27,24 @@ h1 {
 	font-size: 3rem;
 	margin: 15px 0px 15px 0px;
 }
+
 p {
 	padding: 10px;
 }
+
 a {
 	color: #808080;
 }
+
 a:hover {
 	color: #9E0B0F;
+	cursor: pointer;
 }
+
+.fa-solid:hover {
+	cursor: pointer;
+}
+
 /* Styling all buttons... */
 button {
 	background-color: #000000;
@@ -45,12 +54,14 @@ button {
 	border: solid 1px #808080;
 	border-radius: 5px;
 	margin: 2px 2px 2px 2px;
+	
 }
 
 /* Changing button text colour to red when hovered over... */
 button:hover {
 	color: #9E0B0F;
 	transform: scale(1.1);
+	cursor: pointer;
 }
 /* Styling the fontawesome icons' look and hover state */
 i {
@@ -337,6 +348,45 @@ i:hover {
 }
 #score-btn-box {
 	width: 100%;
+}
+
+
+/* modal styles from w3schools https://www.w3schools.com/howto/howto_css_modals.asp */
+
+/* The Modal (background) */
+#modal {
+	display: flex; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: #000000; /* Fallback color */
+	background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+	justify-content: center;
+	align-content: center;
+}
+
+/* Modal Content/Box */
+
+.modal-content {
+	display: block;
+	background-image: linear-gradient(to bottom right, #000000, #003471);
+	background-color: #003471;
+	padding: 20px;
+	border: 5px solid #808080;
+	border-radius: 10px;
+	color: #ffffff;
+	width: 80%;
+	margin: auto;
+}
+
+/* The Close Button */
+
+#continue-btn-modal {
+	font-size: 0.8rem;
 }
 
 /* Styling the 404 page */
