--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ i:hover {
 
 /* Styling the nav bar and fixing it to the top of the screen */
 #nav-box {
-	position: fixed;
+	position: absolute;
 	width: 250px;
 	height: 40px;
 	top: 0px;
@@ -355,7 +355,7 @@ i:hover {
 
 /* The Modal (background) */
 #modal {
-	display: flex; /* Hidden by default */
+	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
 	left: 0;
