--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,20 +28,17 @@ h1 {
 	margin: 15px 0px 15px 0px;
 }
 
+/* Broad styling accross paragraphs */
 p {
 	padding: 10px;
 }
 
+/* Styling links (html a links only appear in 404 page) */
 a {
 	color: #808080;
 }
-
 a:hover {
 	color: #9E0B0F;
-	cursor: pointer;
-}
-
-.fa-solid:hover {
 	cursor: pointer;
 }
 
@@ -71,6 +68,7 @@ i {
 i:hover {
 	color: #9E0B0F;
 	transform: scale(1.25);
+	cursor: pointer;
 }
 
 /* Setting the hidden class to hide/unhide elements in javascript... */
@@ -257,6 +255,7 @@ i:hover {
 	width: 100%;
 	text-align: center;
 }
+
 /* Styling the comment card */
 #comment-card {
 	overflow: auto;
@@ -294,6 +293,7 @@ i:hover {
 #form-btn-box {
 	text-align: center;
 }
+
 /* Styling form button... */
 #send {
 	background-color: #000000;
@@ -305,17 +305,17 @@ i:hover {
 	margin: 2px 2px 2px 2px;
 	
 }
-
-/* Changing button text colour to red when hovered over... */
 #send:hover {
 	color: #9E0B0F;
 	transform: scale(1.1);
 	cursor: pointer;
 }
+
 /* Styling the results card */
 #results-card {
 	display: none;
 }
+
 /* Styling the message for when the quiz is won */
 #win-state {
 	flex-basis: 100%;
@@ -388,7 +388,6 @@ i:hover {
 }
 
 /* Modal Content/Box */
-
 .modal-content {
 	display: block;
 	background-image: linear-gradient(to bottom right, #000000, #003471);
@@ -402,7 +401,6 @@ i:hover {
 }
 
 /* The Close Button */
-
 #continue-btn-modal {
 	font-size: 0.8rem;
 }
@@ -414,6 +412,7 @@ i:hover {
 	justify-content: center;
 	text-align: center;
 }
+
 /* Setting media query for portrait/landscape modes */
 @media screen and (orientation: landscape) {
 	#creature-box {
